src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__sudoedit__sudo_ie.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"sudo -ie -- file1 file2\")?"
---
sudo -ie -- file1 file2

0   4   `sudo`   CALLABLE `sudo`
4   6   ` -`     punctuation.definition.parameter
6   8   `ie`     variable.parameter.option
8   11  ` --`    keyword.operator.end-of-options
11  12  ` `      meta.function-call.arguments
12  17  `file1`  meta.function-call.arguments + dynamic.path.file.complete
17  18  ` `      meta.function-call.arguments
18  23  `file2`  meta.function-call.arguments + dynamic.path.file.complete
